  wxUniChar::operator bool in conditions and it erroneously reports type
  conversion ambiguity in expressions such as this:
     for ( wxString::const_iterator p = s.begin(); *p; ++p )
  This can be worked around by explicitly casting to bool:
     for ( wxString::const_iterator p = s.begin(); (bool)*p; ++p )

- Virtual wxHtmlParser::AddText() takes wxString, not wxChar*, argument now.

- Funtions that took wxChar* arguments that could by NULL in wxWidgets 2.8.
  are deprecated and passing NULL to them won't compile anymore, wxEmptyString
  must be used instead.

- Removed insecure wxGets() and wxTmpnam() functions.

- Removed global GetLine() function from wx/protocol/protocol.h, use
  wxProtocol::ReadLine() instead.


Deprecated methods and their replacements
-----------------------------------------

- wxCreateGreyedImage() deprecated, use wxImage::ConvertToGreyscale() instead.
- wxString::GetWriteBuf() and UngetWriteBuf() deprecated, using wxStringBuffer
  or wxStringBufferLength instead.
- wxDIRCTRL_SHOW_FILTERS style is deprecated, filters are alwsys shown if
  specified so this style should simply be removed
- wxDocManager::MakeDefaultName() replaced by MakeNewDocumentName() and
  wxDocument::GetPrintableName() with GetUserReadableName() which are simpler
  to use
- wxXmlProperty class was renamed to wxXmlAttribute in order to use standard
  terminology. Corresponding wxXmlNode methods were renamed to use
  "Attribute" instead of "Property" or "Prop" in their names.


Major new features in this release
----------------------------------


2.9.0
-----

All:

- Added support for user-defined types to wxConfig (Marcin Wojdyr)
- Added wxJoin() and wxSplit() functions (Francesco Montorsi)
- Added wxMutex::LockTimeout() (Aleksandr Napylov)
- Added wxMemoryInputStream(wxInputStream&) ctor (Stas Sergeev)
- Implemented wxMemoryInputStream::CanRead()
- Added wxEXEC_BLOCK flag (Hank Schultz)
- Add support for wxStream-derived classes to wxRTTI (Stas Sergeev)